# spack-exercise

./: CMakeLists.txt  package.py
